--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ body{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-size: cover;
   background-position: center center;
   background-image: url(../images/b1.jpg);
